# Haskell-Practices

./: .gitignore  .stylish-haskell.yaml  README.md  practice-2020-05-20.md  practice-2020-06-04.md  practice-2020-10-23.md  stack.yaml
etc/: STLC.hs  SuperEffects.hs
lecture10-practice/: README.md  lecture10-practice.cabal
lecture10-practice/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
lecture11-practice/: README.md
lecture12-practice/: README.md
lecture4-practice/: README.md  lecture4-practice.cabal
lecture4-practice/src/: Task1.hs  Task10.hs  Task11.hs  Task12.hs  Task13.hs  Task14.hs  Task15.hs  Task16.hs  Task17.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs  Task9.hs
lecture5-practice/: Parser.hs  README.md  README_old.md
lecture6-practice/: README.md  lecture6-practice.cabal
lecture6-practice/app/: Main.hs
lecture6-practice/src/: Task1.hs  Task2.hs  Task3.hs  Task5.hs
lecture7-practice/: README.md  lecture7-practice.cabal
lecture7-practice/src/: Task0.hs  Task1.hs  Task2.hs
lecture8-practice/: LICENSE  README.md  lecture8-practice.cabal
lecture8-practice/app/: Main.hs
lecture8-practice/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs
lecture9-practice/: README.md  Task1.hs  Task2.hs  Task3.hs  Task4.hs  default.nix
lectures-6-7-practice/: README.md
