name:                lecture10-practice
version:             0.1.0.0
synopsis:            Synopsis for practice 10
description:         Practice for 10th lecture

homepage:            https://github.com/pva701/Haskell-Practice/tree/master/lecture10-practice#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
                     , Task3
                     , Task4
                     , Task5
                     , Task6
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , deepseq
                     , vector
                     , random
                     , mtl
  default-language:    Haskell2010

executable lecture10
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lecture8-practice
                     , deepseq
                     , vector
                     , random
