name:                lecture4-practice
version:             0.1.0.0
synopsis:            Synopsis for practice 4
description:         Practice for 4th lecture

homepage:            https://github.com/pva701/Haskell-Practice/tree/master/lecture4-practice#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
                     , Task3
                     , Task4
                     , Task5
                     , Task6
                     , Task7
                     , Task8
                     , Task9
                     , Task10
                     , Task11
                     , Task12
                     , Task13
                     , Task14
                     , Task15
                     , Task16
                     , Task17
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , split
  default-language:    Haskell2010
